スタイル適用
画面の各要素に対して、CSSを適用。

#3

--- a/front/scss/style.scss
+++ b/front/scss/style.scss
@@ -1,4 +1,18 @@
 // base
 @import './base/base';
 
-@import './tools/hoverInput'
+// mixin
+@import './tools/hoverInput';
+@import './tools/mixin';
+
+// settings
+@import './settings/colors';
+
+// simpleModule
+@import './simpleModule/button';
+
+// layout
+@import './layout/layout';
+
+// module
+@import './module/todoModules';
